--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -22,23 +22,23 @@ html(lang="en")
 				.row
 					.col-md-offset-1.col-md-2.step.complete
 						.ico.registra
-						h3.text-center registro
+						h3.text-center Registra
 						span
 					.col-md-2.step.active
 						.ico.cotiza
-						h3.text-center cotiza
+						h3.text-center Cotiza
 						span
 					.col-md-2.step
 						.ico.valida
-						h3.text-center cuestionario
+						h3.text-center Valida
 						span
 					.col-md-2.step
 						.ico.contrata
-						h3.text-center contrata
+						h3.text-center Contrata
 						span
 					.col-md-2.step
 						.ico.poliza
-						h3.text-center póliza
+						h3.text-center Recibe tu póliza
 						span
 		hr
 		
@@ -572,7 +572,6 @@ html(lang="en")
 					//.modal-footer
 						button.btn.btn-default(type='button', data-dismiss='modal') Close
 						button.btn.btn-primary(type='button') Save changes
-
 		hr
 		h1 contrata
 		.container
@@ -614,8 +613,8 @@ html(lang="en")
 									input#qTelefono.form-control(type="text",nombre="qTelefono",placeholder="Teléfono de contacto*")
 							.col-md-6
 								.form-group
-									p.labelgral Apellido Materno*
-									input#qMaterno.form-control(type="text",nombre="qMaterno",placeholder="Apellido Materno")
+									p.labelgral Apellido Paterno*
+									input#qMaterno.form-control(type="text",nombre="qPaterno",placeholder="Apellido Paterno")
 							.col-md-6
 								.form-inline
 									p.labelgral Genero*
@@ -693,7 +692,7 @@ html(lang="en")
 								.col-md-6
 									h5 Periodo:
 								.col-md-6
-									h6 mensual
+									h6 Mensual
 							.col-md-12
 								.col-md-6
 									h5 Primer pago:
